juice-shop/templates/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lab-1
  name: deployment-knight
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: juice-shop
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: juice-shop
    spec:
      containers:
      - image: bkimminich/juice-shop
        imagePullPolicy: Always
        name: juice-shop
        ports:
        - containerPort: 3000
