juice-shop/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lab-1
  name: service-lab
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: juice-shop
